<resources>
    <string name="app_name">Memory_Game</string>
    <string name="setting">Setting</string>
    <string name="title_activity_high_scores">HighScores</string>
    <string name="Start">START</string>
    <string name="hs">HIGHSCORES</string>
    <string name="Welcome">WELCOME TO CONCENTRATION</string>
    <string name="Please">Please enter your desired number of cards</string>
    <string name="Number">Number of Cards</string>
    <string name="New">NEW GAME</string>
    <string name="Try">TRY AGAIN</string>
    <string name="End">END GAME</string>
    <string name="Main">MAIN MENU</string>
    <string name="Enter">Please Enter Your Desired UserName</string>
    <string name="preference_file_key">com.edu.cpp.tbd.memory</string>
    <string name="sound_off">Sound Off</string>
    <string-array name="size_array">
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
    </string-array>
</resources>
