<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/felt"
    tools:context="com.tbd.memory_game.MainActivity">

    <TextView
        android:text="@string/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@android:color/background_light" />

    <Button
        android:text="@string/hs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:id="@+id/highScoresButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settingButton"
        android:layout_above="@+id/highScoresButton"
        android:layout_alignLeft="@+id/highScoresButton"
        android:layout_alignStart="@+id/highScoresButton"
        android:layout_marginBottom="27dp"
        android:layout_alignRight="@+id/highScoresButton"
        android:layout_alignEnd="@+id/highScoresButton" />

    <Button
        android:text="@string/Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startButton"
        android:layout_above="@+id/settingButton"
        android:layout_marginBottom="30dp"
        android:layout_alignLeft="@+id/settingButton"
        android:layout_alignStart="@+id/settingButton"
        android:layout_alignRight="@+id/settingButton"
        android:layout_alignEnd="@+id/settingButton" />

</RelativeLayout>
