<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/felt"
    tools:context="com.tbd.memory_game.GameActivity"
    android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">

    <Button
        android:text="@string/End"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/endGameButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/Try"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tryAgainButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/New"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newGameButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/endGameButton"
        android:layout_marginBottom="13dp"
        android:id="@+id/mainLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/scoreDisplay"
        android:layout_alignBottom="@+id/mainLayout" />

</RelativeLayout>
